# quict

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Highly_mediate_measure_circuit.qasm  Highly_paralleized_circuit.qasm  Highly_parallelized_circuit.txt  Highly_serialzed_circuit.qasm  LICENSE  Makefile  README.md  adder1.npy  baidu_result.txt  benchmark.ipynb  build.ps1  build.sh  circ.qasm  citation  clean.Unix.sh  clean.ps1  clean.sh  conf.py  dependency.sh  dm.xlsx  grover1.npy  grover2.npy  install.sh  mapped_circ.qasm  move_shared_lib.sh  new_arch_result.txt  opt.xlsx  plat_test.py  qaoa_demo.ipynb  qasm5.txt  qiskit_alg_benchmark_shor_data.txt  qiskit_density_matrix_speed.txt  qiskit_mapping_benchmark_data.txt  qiskit_state_vector_speed.txt  quafu_test.py  readthedocs.yml  (+16 more)
Benchmarking/: Benchmarking.py  __init__.py  example.py  test.py
Example/: CCX.py  CCX_Dec.py  CNOT_RZ.py  CNOT_an.py  CheckerTest.py  Deutsch_Jozsa.py  EfficiencyTest.py  Efficiency_Checker.py  PermMulTest.py  QASM_checker.py  Search_with_prior_knowledge.py  Shor.py  frameworkTest.py  test.py  try.py
QAOA_model_2022-10-13-10_01_36/: 100.ckpt  200.ckpt  model.ckpt
QNN/: QNN.py  data_process.py
QNN_MNIST/: 0_120.ckpt  0_150.ckpt  0_180.ckpt  0_210.ckpt  0_240.ckpt  0_270.ckpt  0_30.ckpt  0_300.ckpt  0_60.ckpt  0_90.ckpt  1_120.ckpt  1_150.ckpt  1_180.ckpt  1_210.ckpt  1_240.ckpt  1_270.ckpt  1_30.ckpt  1_300.ckpt  1_60.ckpt  1_90.ckpt  2_120.ckpt  2_150.ckpt  2_180.ckpt  2_210.ckpt  2_240.ckpt  2_270.ckpt  2_30.ckpt  2_300.ckpt  2_60.ckpt  2_90.ckpt
QNN_MNIST_FRQI_2023-02-23-12_49_12/: 0_120.ckpt  0_150.ckpt  0_180.ckpt  0_210.ckpt  0_240.ckpt  0_270.ckpt  0_30.ckpt  0_300.ckpt  0_60.ckpt  0_90.ckpt  1_120.ckpt  1_150.ckpt  1_180.ckpt  1_210.ckpt  1_240.ckpt  1_270.ckpt  1_30.ckpt  1_300.ckpt  1_60.ckpt  1_90.ckpt  2_120.ckpt  2_150.ckpt  (+9 more)
QuICT/backends/: CMakeLists.txt  __init__.py  _systemcdll.py  dll.cpp  systemcdll.py
QuICT/backends/tbb/: index.html
QuICT/qcda/mapping/mcts_cpp/lib/: CMakeLists.txt  test_data_generator.cc  test_mcts_tree.cc  test_rl_mcts_tree.cc
QuICT/qcda/mapping/mcts_cpp/lib/include/: mcts_node.h  mcts_tree.h  rl_mcts_tree.h  utility.h
QuICT/qcda/mapping/mcts_cpp/lib/src/: data_generator.cc  mcts_node.cc  mcts_tree.cc  utility.cc
QuICT/qcda/simulation/backends/: CMakeLists.txt  __init__.py  circuit_sim_test.cpp  circuit_simulator.h  cpu.cpp  cpu.py  data_gen.py  data_gen_perf.py  data_gen_test.py  gate.h  hybrid_sim_perf.cpp  hybrid_sim_test.cpp  hybrid_simulator.h  index_test.cpp  matricks_sim_test.cpp  matricks_simulator.h  miscellaneous_test.cpp  miscllaneous_test.cpp  mono_sim_perf.cpp  mono_sim_test.cpp  monotune_simulator.h  port.cpp  port.py  q_state.h  q_state_set.h  q_state_simulator.h  simulation_backends_perf.cpp  simulation_backends_test.cpp  simulator.h  state_vector.cpp  state_vector.h  test_simulator.py  test_utility.h  tiny_sim_test.cpp  tiny_simulator.h  utility.h
QuICT/qcda/simulation/backends/python_binding/: port.h
QuICT/qcda/simulation/backends/src/: CMakeLists.txt  circuit_sim_test.cpp  circuit_simulator.h  data_gen_perf.py  data_gen_test.py  gate.h  matricks_sim_test.cpp  matricks_simulator.h  q_state_set.h  q_state_simulator.h  test_utility.h  tiny_simulator.h  utility.h
QuICT/qcda/simulation/backends/src/avx_impl/: avx_ctrl_diag_gate.tcc  avx_ctrl_unitary_gate.tcc  avx_diag_n_gate.tcc  avx_h_gate.tcc  avx_unitary_n_gate.tcc  avx_x_gate.tcc
QuICT/qcda/simulation/backends/src/test_data/: tiny_ctrl_diag_3.txt  tiny_ctrl_unitary_2.txt  tiny_ctrl_unitary_3.txt  tiny_diag_1.txt  tiny_diag_2.txt  tiny_diag_3.txt  tiny_h_3.txt  tiny_h_4.txt  tiny_unitary_1.txt  tiny_x_1.txt  tiny_x_2.txt  tiny_x_3.txt
QuICT/qcda/simulation/backends/test_data/: tiny_ctrl_diag_2.txt  tiny_ctrl_diag_4.txt  tiny_ctrl_unitary_4.txt  tiny_diag_4.txt  tiny_h_1.txt  tiny_h_2.txt  tiny_unitary_2.txt  tiny_unitary_3.txt  tiny_unitary_4.txt  tiny_x_4.txt  x.txt
QuICT/simulation/state_vector/cpu_simulator/: CMakeLists.txt  cpu.py
QuICT/simulation/state_vector/cpu_simulator/refactor/: .gitignore  CMakeLists.txt  configure.sh
QuICT/simulation/state_vector/cpu_simulator/refactor/bench/: bench_quict_sim.cc  bench_quict_sim.hpp
QuICT/simulation/state_vector/cpu_simulator/refactor/gate/: gate.hpp  gate_attr.hpp  gate_tag.hpp  igate.hpp
QuICT/simulation/state_vector/cpu_simulator/refactor/simulator/: backends.hpp  naive_delegate.hpp  simulator.cc  simulator.hpp  simulator_delegate.hpp  utility.hpp
QuICT/simulation/state_vector/cpu_simulator/refactor/simulator/apply_gate/: delegate.hpp
QuICT/simulation/state_vector/cpu_simulator/refactor/simulator/apply_gate/impl/: naive.hpp
QuICT/simulation/state_vector/cpu_simulator/refactor/simulator/apply_gate/impl/x86_64/: avx.hpp  avx512.hpp  sse.hpp  sse2.hpp
QuICT/simulation/state_vector/cpu_simulator/refactor/tests/: gen_regression_data.py  spec.cc
QuICT/simulation/state_vector/cpu_simulator/refactor/tests/common/: data_reader.hpp  test_vec.hpp
QuICT/simulation/state_vector/cpu_simulator/refactor/tests/gates/: apply_unitary_gates.cc
QuICT/simulation/state_vector/cpu_simulator/refactor/tests/gates/unitary/: apply_unitary_gates.cc  naive.cc
QuICT/simulation/state_vector/cpu_simulator/refactor/tests/gates/unitary/x86_64/: sse.cc
QuICT/simulation/state_vector/cpu_simulator/refactor/utility/: complex_detect.hpp  debug_msg.hpp  feat_detect.hpp
QuICT/simulation/state_vector/cpu_simulator/src/: CMakeLists.txt  README.md  circuit_simulator.h  data_gen_test.py  matricks_simulator.h  q_state_test.cpp  tiny_simulator.h  utility.h
QuICT/simulation/state_vector/cpu_simulator/src/avx_impl/: avx_ctrl_diag_gate.h  avx_ctrl_unitary_gate.h  avx_diag_n_gate.h  avx_h_gate.h  avx_measure_gate.h  avx_unitary_n_gate.h  avx_x_gate.h
QuICT/utility/graph_structure/: CMakeLists.txt  __init__.py  build.sh  graph.h  graph_python_port.cpp  graph_python_port.h  graph_structure.py  graph_structure_bind.py  unit_test.py
unit_test/qcda/synthesis/initial_state_preparation/: CMakeLists.txt  __init__.py  initial_state_preparation.py
(+74747 files in other folders)
